Closed
Bug 28012
Opened 25 years ago
Closed 25 years ago
Urls loading on the Isolate lan are taking to long
Categories
(Core :: Networking, defect, P3)
Tracking
()
VERIFIED
FIXED
M14
People
(Reporter: pawyskoczka, Assigned: warrensomebody)
References
Details
(Whiteboard: [PDT+] w/b minus on 03/03)
Attachments
(1 file)
|
43.53 KB,
text/plain
|
Details |
Overview Description:
When running our performance tests on the Isolated Lan, we are noticing that
it takes a long time for urls to load in the browser. In Communicator 4.72
loading a page will take on the order of 2-3 seconds where Seamonkey is taking
16-17 seconds. Seamonkey is slower but not that slow. We are unable to obtain
performance data that is reliable.
Steps to Reproduce:
1)Setup the Isolated lan configuration
2)Run the perl performance script or load pages manually
3)Check the results
Actual Results:
Page loads are slow
Expected Results:
Build Date & Platform Bug Found:
Windows 95. Builds are not an issue here.
Additional Builds and Platforms Tested On:
None
Additional Information:
None
| Reporter | ||
Updated•25 years ago
|
Putting on the PDT+ radar for dogfood.
| Reporter | ||
Comment 3•25 years ago
|
||
Jud looked at this last time we had a problem in this area. Adding valeski to
the cc list.
| Assignee | ||
Updated•25 years ago
|
Whiteboard: [PDT+] → [PDT+] 2/25/00
| Assignee | ||
Updated•25 years ago
|
Target Milestone: M15 → M14
will give til 03/03 if needed.
Whiteboard: [PDT+] 2/25/00 → [PDT+] 2/25/00 - will give til 03/03 if needed.
| Assignee | ||
Comment 5•25 years ago
|
||
I added the ability to set the environment variable DNS_TIMING before doing a
run which will enable the file dns-timing.txt to be dumped out. From this I'm
hoping that we can see whether dns is the culprit or not. I've asked leger and
paw to give it a try.
Whiteboard: [PDT+] 2/25/00 - will give til 03/03 if needed. → [PDT+] w/b minus on 03/03
| Assignee | ||
Comment 6•25 years ago
|
||
We got this dns timing stuff going just in time to realize that the recent
changes to remove MOZ_PERF have brought win95 back up to acceptable levels of
performance for the beta. Consequently I'm closing this.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 7•25 years ago
|
||
P.S. Enclosing a log of one of Paul's recent runs, showing that dns lookup time
is not significant.
| Assignee | ||
Comment 8•25 years ago
|
||
| Reporter | ||
Comment 9•25 years ago
|
||
Tom, I'm going to verify this since I was working with Warren on this bug eventhough you are the QA contact.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•