Added ability to get dns timing info. Set DNS_TIMING env var, and get dns-timing.txt file. For bug 28012 and others. r=gordon,a=jevering